--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/*
 *.iws
 *.iml
 *.ipr
@@ -37,3 +38,4 @@ build/
 ### Mac OS ###
 .DS_Store
 bot.properties
+out/*
