--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>gg.druffko</groupId>
     <artifactId>discord-rss-bot</artifactId>
-    <version>1.0-DEV</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
